# lr

./: .gitignore  README.md  xmake.lua
crates/rs_content/: Cargo.toml
crates/rs_cprep/: Cargo.toml  build.rs
crates/rs_model_loader/: Cargo.toml
crates/rs_network/: Cargo.toml  build.rs
crates/rs_render_core/: Cargo.toml
crates/rs_texpress/: Cargo.toml
crates/rs_text/: Cargo.toml
rs_android/: Cargo.toml  build.rs
rs_android/src/: android_main.rs  application.rs  egui_state.rs  enviroment.rs  error.rs  gui.rs  java_input_stream.rs  jni_onload.rs  key_event.rs  lib.rs  motion_event.rs  native_window.rs
rs_artifact/: Cargo.toml
rs_artifact/src/: artifact.rs  asset.rs  bincode_legacy.rs  content_type.rs  derive_data.rs  endian.rs  error.rs  file_header.rs  ibl_baking.rs  image.rs  java_input_stream.rs  level.rs  lib.rs  material.rs  material_paramenters.rs  mesh_vertex.rs  mesh_vertex_visitor.rs  node_anim.rs  property_value_type.rs  resource_info.rs  resource_type.rs  shader_source_code.rs  skeleton.rs  skeleton_animation.rs  skin_mesh.rs  sound.rs  static_mesh.rs  type_expected.rs
rs_assimp/: Cargo.toml
rs_assimp/src/: anim_behaviour.rs  animation.rs  bone.rs  config.rs  convert.rs  error.rs  face.rs  lib.rs  material.rs  mesh.rs  mesh_anim.rs  mesh_key.rs  mesh_morph_anim.rs  mesh_morph_key.rs  metadata.rs  node.rs  node_anim.rs  post_process_steps.rs  primitive_type.rs  property_store.rs  quat_key.rs  scene.rs  skeleton.rs  skeleton_bone.rs  texture.rs  texture_type.rs  vector_key.rs  vertex_weight.rs
rs_audio/: Cargo.toml
rs_audio/src/: audio_device.rs  audio_engine.rs  audio_file_player_node.rs  audio_mixer_node.rs  audio_node.rs  audio_output_node.rs  audio_player_node.rs  error.rs  lib.rs
rs_build_tool/: Cargo.toml
rs_build_tool/src/: build_script.rs  cli.rs  json_project.rs  lib.rs  load_plugins.rs  main.rs  toml_edit.rs
rs_computer_graphics/: Cargo.toml
rs_computer_graphics/src/: acceleration_bake.rs  actor.rs  actor_selector.rs  application.rs  atlas.rs  bake.rs  bake_info.rs  bind_group_layout_entry_hook.rs  buffer_dimensions.rs  camera.rs  cube_map.rs  curve.rs  default_textures.rs  depth_texture.rs  dotnet_runtime.rs  dump_layout.rs  egui_context.rs  entry_info.rs  example_application.rs  file_manager.rs  frame_buffer.rs  gizmo.rs  glam_color.rs  lib.rs  light.rs  logger.rs  main.rs  material.rs  material_type.rs  mipmap_generator.rs  model_loader.rs  native_window.rs  pbr_material.rs  primitive_data.rs  project.rs  resource_manager.rs  sdf_2d_generator.rs  static_mesh.rs  texture_loader.rs  thread_pool.rs  (+4 more)
rs_core_minimal/: Cargo.toml  build.rs
rs_core_minimal/src/: bitonic_sort.rs  color.rs  error.rs  file_manager.rs  file_type.rs  frustum.rs  lib.rs  line_3d.rs  misc.rs  need_copy.rs  parallel.rs  path_ext.rs  plane_3d.rs  primitive_data.rs  serde_user_data.rs  settings.rs  sphere_3d.rs  thread_pool.rs
rs_desktop_standalone/: Cargo.toml
rs_desktop_standalone/src/: application.rs  application_context.rs  custom_event.rs  lib.rs  main.rs
rs_dotnet/: Cargo.toml  build.rs
rs_dotnet/src/: dotnet.rs  error.rs  lib.rs
rs_dotnet_host/: Cargo.toml
rs_dotnet_host/src/: application.rs  dotnet_runtime.rs  entry_info.rs  error.rs  file_watch.rs  lib.rs  native_keyboard_input.rs
rs_editor/: Cargo.toml  build.rs
rs_editor/src/: actor.rs  build_config.rs  camera_input_event_handle.rs  content_folder.rs  custom_event.rs  data_source.rs  editor.rs  editor_context.rs  editor_ui.rs  error.rs  keys_detector.rs  level.rs  lib.rs  main.rs  material.rs  material_resolve.rs  model_loader.rs  name_generator.rs  node_animation.rs  project.rs  project_context.rs  property.rs  scene_node.rs  skeleton.rs  skeleton_animation.rs  skeleton_mesh.rs  standalone_simulation_options.rs  static_mesh.rs  texture.rs  thumbnail_cache.rs  watch_shader.rs  windows_manager.rs
rs_engine/: Cargo.toml
rs_engine/src/: actor.rs  camera.rs  camera_component.rs  camera_input_event_handle.rs  cluster_light.rs  collision_componenet.rs  console_cmd.rs  debug_show_flag.rs  default_textures.rs  directional_light.rs  drawable.rs  engine.rs  error.rs  file_type.rs  frame_sync.rs  handle.rs  input_mode.rs  input_type.rs  keys_detector.rs  kinematic_component.rs  lib.rs  mesh_buffer.rs  mipmap_generator.rs  misc.rs  network.rs  physics_ability.rs  physics_debug_render.rs  planar_reflection.rs  player_viewport.rs  plugin.rs  plugin_context.rs  primitive_data.rs  property.rs  render_thread_mode.rs  resource_manager.rs  rotator.rs  scene_node.rs  skeleton_animation_provider.rs  skeleton_mesh_component.rs  static_mesh_component.rs  (+5 more)
rs_hotreload_plugin/: Cargo.toml
rs_hotreload_plugin/src/: error.rs  hot_reload.rs  lib.rs  library_reload.rs
rs_media/: Cargo.toml  build.rs
rs_media/src/: audio_device.rs  audio_format.rs  audio_format_converter.rs  audio_format_flag.rs  audio_frame_extractor.rs  audio_pcmbuffer.rs  audio_player_item.rs  composition.rs  custom_io_input.rs  dsp.rs  error.rs  hw.rs  lib.rs  media_stream.rs  sw.rs  time_range.rs  video_frame_extractor.rs  video_frame_player.rs  video_player_item.rs
rs_media_cmd/: Cargo.toml
rs_media_cmd/src/: main.rs
rs_metis/: Cargo.toml  build.rs
rs_metis/src/: cluster.rs  edge.rs  error.rs  graph.rs  lib.rs  metis.rs  vec3_hash_wrapper.rs  vertex_position.rs
rs_native_plugin/: Cargo.toml  build.rs
rs_native_plugin/src/: lib.rs  plugin.rs  plugin_crate.rs
rs_proc_macros/: Cargo.toml
rs_proc_macros/src/: error.rs  lib.rs  load_plugin.rs  multiple_thread_functions_generator.rs  plugin_project_file_path.rs  shader.rs  string_extension.rs  token_stream_extension.rs  uniform.rs
rs_render/: Cargo.toml
rs_render/shaders/: blit.wgsl  box_culling.wgsl  brdf_lut.wgsl  camera_frustum.wgsl  cluster_light.wgsl  common.wgsl  constants.wgsl  depth.wgsl  format_conversion.wgsl  fxaa.wgsl  global_constants.wgsl  grid.wgsl  ibl_common.wgsl  irradiance_cube_map.wgsl  jfa.wgsl  (+17 more)
rs_shader_compiler/: Cargo.toml
rs_shader_compiler_core/: Cargo.toml
rs_shader_compiler_lsp/: Cargo.toml
rs_standalone_core/: Cargo.toml
(+486 files in other folders)
