[package]
name = "rs_android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
[features]
default = ["standalone"]
standalone = ["rs_render/standalone", "rs_engine/standalone"]

[target.'cfg(target_os = "android")'.dependencies]
glam = { version = "0.27.0", features = ["mint", "serde"] }
log = "0.4.17"
env_logger = "0.10.1"
egui = "0.27.2"
url = { version = "2.5.0", features = ["serde"]}
jni = "0.21.1"
jni_fn = "0.1.2"
ndk-sys = "0.5.0"
raw-window-handle = "0.6"
android_logger = "0.13"
rs_engine = { version = "0.1.0", path = "../rs_engine" }
rs_artifact = { version = "0.1.0", path = "../rs_artifact" }
rs_render = { version = "0.1.0", path = "../rs_render" }

[lib]
crate-type = ["rlib", "cdylib"]