[package]
name = "rs_android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
[features]
default = ["standalone"]
standalone = ["rs_render/standalone", "rs_engine/standalone"]

[target.'cfg(target_os = "android")'.dependencies]
glam = { version = "0.29.2", features = ["mint", "serde"] }
log = "0.4.22"
env_logger = "0.11.6"
egui = "0.30.0"
url = { version = "2.5.4", features = ["serde"] }
jni = "0.21.1"
jni_fn = "0.1.2"
ndk-sys = "0.6.0"
raw-window-handle = "0.6.2"
android_logger = "0.14.1"
rs_engine = { path = "../rs_engine" }
rs_artifact = { path = "../rs_artifact" }
rs_render = { path = "../rs_render" }

[lib]
crate-type = ["rlib", "cdylib"]
