[package]
name = "rs_android"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["standalone"]
standalone = ["rs_render/standalone", "rs_engine/standalone"]
profiler = ["tracy-client/enable", "rs_engine/profiler", "rs_render/profiler"]
panic_hook = ["dep:backtrace", "dep:tracing", "dep:tracing-subscriber"]
plugin_shared_crate = ["rs_engine/plugin_shared_crate"]
network = ["dep:rs_network", "rs_engine/network"]
android-native-activity = [
    "winit/android-native-activity",
    "rs_engine/android-native-activity",
]

[dependencies]
glam = { version = "0.30.5", features = ["mint", "serde"] }
log = "0.4.28"
env_logger = "0.11.8"
egui = "0.32.2"
url = { version = "2.5.7", features = ["serde"] }
jni = "0.21.1"
jni_fn = "0.1.2"
ndk-sys = "0.6.0"
ndk-context = "0.1.1"
raw-window-handle = "0.6.2"
android_logger = "0.15.1"
tracy-client = { version = "0.18.2", default-features = false }
winit = { version = "0.30.12" }
backtrace = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
rs_artifact = { path = "../rs_artifact" }
rs_engine = { path = "../rs_engine" }
rs_foundation = { path = "../rs_foundation" }
rs_render = { path = "../rs_render" }
rs_proc_macros = { path = "../rs_proc_macros" }
rs_network = { path = "../crates/rs_network", optional = true }

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]
rs_core_minimal = { path = "../rs_core_minimal" }
