[package]
name = "rs_artifact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
env_logger = "0.11.3"
serde = { version = "1.0.205", features = ["derive"] }
# typetag = "0.2"
# dyn-clone = "1.0.16"
bincode = { version = "1.3.3" }
glam = { version = "0.28.0", features = ["mint", "serde"] }
type-layout = "0.2.0"
image = "0.25.1"
url = { version = "2.5.2", features = ["serde"]}
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
rs_foundation = { path = "../rs_foundation" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_render_types = { path = "../rs_render_types" }

[dev-dependencies]
serde_json = "1.0.120"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
jni_fn = "0.1.2"
ndk-sys = "0.5.0"