[package]
name = "rs_artifact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
# typetag = "0.2"
# dyn-clone = "1.0.16"
bincode = { version = "2.0.1", features = ["serde"] }
glam = { version = "0.30.9", features = ["mint", "serde"] }
type-layout = "0.2.0"
image = "0.25.9"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
rs_foundation = { path = "../rs_foundation" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_render_types = { path = "../rs_render_types" }
rs_texpress = { path = "../crates/rs_texpress", default-features = false, features = [
    "standalone",
] }

[dev-dependencies]
serde_json = "1.0.145"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
jni_fn = "0.1.2"
ndk-sys = "0.6.0"
