[package]
name = "rs_assimp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
russimp-sys = { version = "2.0.2", features = ["prebuilt", "static-link"] }
bitflags = "2.4.2"
glam = { version = "0.22.0" }
strum = "0.26.1"
strum_macros = "0.26.1"
rs_foundation = { path = "../rs_foundation" }
rs_core_minimal = { path = "../rs_core_minimal" }
