[package]
name = "rs_assimp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
russimp-sys = { version = "2.0.2", features = ["prebuilt", "static-link"] }
bitflags = "2.6.0"
glam = { version = "0.28.0", features = ["mint", "serde"] }
strum = "0.26.3"
strum_macros = "0.26.4"
lazy_static = "1.5.0"
rs_foundation = { path = "../rs_foundation" }

[dev-dependencies]
rs_core_minimal = { path = "../rs_core_minimal" }
