[package]
name = "rs_audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
cpal = "0.15.2"
lazy_static = "1.4.0"
rs_media = { path = "../rs_media" }
rs_core_audio = { path = "../rs_core_audio" }
rs_foundation = { path = "../rs_foundation" }
rs_core_minimal = { path = "../rs_core_minimal" }

[dev-dependencies]
env_logger = "0.10.0"