[package]
name = "rs_build_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = { version = "1.0.99" }
toml_edit = "0.23.4"
glob = "0.3.3"
rs_core_minimal = { path = "../rs_core_minimal" }
rs_foundation = { path = "../rs_foundation" }
