[package]
name = "rs_build_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = { version = "1.0.100" }
toml_edit = "0.23.7"
glob = "0.3.3"
rs_core_minimal = { path = "../rs_core_minimal" }
rs_foundation = { path = "../rs_foundation" }
