[package]
name = "rs_computer_graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.33"
chrono = "0.4"
lazy_static = "1.4.0"
notify = "5.1.0"
notify-debouncer-mini = { version = "0.2.0" }
pollster = "0.2"
log = "0.4.17"
env_logger = "0.10.0"
glam = "0.22.0"
rayon = "1.6"
walkdir = "2"
serde = "1.0.164"
serde_json = "1.0"
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
moka = { version = "0.11", default-features = false, features = ["sync"] }
image = "0.24.5"
tokio = { version = "1.28.1" }
winit = { version = "0.28.7" }
wgpu = "0.18.0"
naga = "0.14.0"
epi = "0.17"
egui = "0.23.0"
egui_wgpu_backend = "0.27.0"
egui_winit_platform = "0.20.0"
egui_demo_lib = "0.21.0"
indicatif = "0.17.5"
rustfft = "6.1.0"
parry3d = "0.13.5"
type-layout = "0.2.0"
rand = "0.8.5"
# crossbeam = "0.8.2"
rs_foundation = { version = "0.1.0", path = "../rs_foundation" }
egui-gizmo = { version = "0.12.0", path = "../.xmake/deps/egui-gizmo" }

[target.'cfg(target_os = "windows")'.dependencies]
plotters = "0.3.3"
russimp = { version = "1.0.4", features = ["prebuilt"] }
rs_metis = { version = "0.1.0", path = "../rs_metis" }
rs_dotnet = { version = "0.1.0", path = "../rs_dotnet", optional = true, default-features = false }
rs_quickjs = { version = "0.1.0", path = "../rs_quickjs", optional = true, default-features = false }
rs_media = { version = "0.1.0", path = "../rs_media" }
meshopt = { version = "0.1.9", path = "../.xmake/deps/meshopt-rs" }
