[package]
name = "rs_core_minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["editor"]
standalone = []
editor = []

[dependencies]
dunce = "1.0.5"
path-slash = "0.2.1"
serde = { version = "1.0.209", features = ["derive", "rc"] }
glam = { version = "0.28.0", features = ["mint", "serde"] }
md-5 = { version = "0.10.6" }
rayon = "1.10.0"
lazy_static = "1.5.0"
regex = "1.10.6"
rs_foundation = { path = "../rs_foundation" }
