[package]
name = "rs_core_minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["editor"]
standalone = []
editor = []

[dependencies]
dunce = "1.0.5"
path-slash = "0.2.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
glam = { version = "0.30.9", features = ["mint", "serde"] }
md-5 = { version = "0.10.6" }
rayon = "1.11.0"
lazy_static = "1.5.0"
regex = "1.12.2"
rand = { version = "0.9.2" }
url = { version = "2.5.7", features = ["serde"] }
typetag = "0.2.21"
dyn-clone = "1.0.20"
downcast-rs = "2.0.2"
rs_foundation = { path = "../rs_foundation" }

[dev-dependencies]
image = "0.25.9"
