[package]
name = "rs_desktop_standalone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["standalone"]
renderdoc = ["rs_render/renderdoc", "rs_engine/renderdoc"]
standalone = [
    "rs_render/standalone",
    "rs_engine/standalone",
    "rs_core_minimal/standalone",
]
profiler = ["tracy-client/enable", "rs_render/profiler", "rs_engine/profiler"]
plugin_dotnet = ["dep:rs_dotnet", "dep:rs_dotnet_host"]
plugin_v8 = ["dep:rs_v8_host"]
plugin_shared_crate = ["rs_engine/plugin_shared_crate"]
network = ["dep:rs_network", "rs_engine/network"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
bincode = { version = "2.0.1", features = ["serde"] }
glam = { version = "0.30.5" }
uuid = { version = "1.18.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
url = { version = "2.5.7", features = ["serde"] }
percent-encoding = "2.3.2"
winit = { version = "0.30.12" }
egui = { version = "0.32.2" }
egui_extras = { version = "0.32.2", features = ["all_loaders"] }
egui-winit = { version = "0.32.2" }
rfd = "0.15.4"
image = "0.25.8"
regex = "1.11.2"
notify = "8.2.0"
notify-debouncer-mini = { version = "0.7.0" }
walkdir = "2.5.0"
dunce = "1.0.5"
path-slash = "0.2.1"
md-5 = { version = "0.10.6" }
anyhow = { version = "1.0.99" }
lazy_static = "1.5.0"
naga = { version = "25.0.0" }
wgpu = "25.0.0"
tracy-client = { version = "0.18.2", default-features = false }
rs_proc_macros = { path = "../rs_proc_macros" }
rs_render = { path = "../rs_render" }
rs_foundation = { path = "../rs_foundation" }
rs_artifact = { path = "../rs_artifact" }
rs_engine = { path = "../rs_engine" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_media = { path = "../rs_media" }
rs_audio = { path = "../rs_audio" }
rs_v8_host = { path = "../rs_v8_host", optional = true }
rs_network = { path = "../crates/rs_network", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
rs_dotnet = { path = "../rs_dotnet", optional = true }
rs_dotnet_host = { path = "../rs_dotnet_host", optional = true }
