[package]
name = "rs_dotnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
rs_dotnet = []

[dependencies]
libc = "0.2.180"
lazy_static = "1.5.0"
log = "0.4.29"
env_logger = "0.11.8"

[build-dependencies]
rs_core_minimal = { path = "../rs_core_minimal" }
