[package]
name = "rs_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["editor", "renderdoc"]
renderdoc = ["rs_render/renderdoc", "rs_engine/renderdoc"]
editor = [
    "rs_shader_compiler/editor",
    "rs_render/editor",
    "rs_core_minimal/editor",
    "rs_engine/editor",
]
standalone = [
    "rs_shader_compiler/standalone",
    "rs_render/standalone",
    "rs_core_minimal/standalone",
    "rs_engine/standalone",
]
profiler = ["tracy-client/default", "rs_render/profiler", "rs_engine/profiler"]
plugin_shared_crate = ["rs_engine/plugin_shared_crate"]
plugin_dotnet = ["dep:rs_dotnet", "dep:rs_dotnet_host"]
plugin_v8 = ["dep:rs_v8_host"]
exit_check = []
detect_encoding = ["rs_shader_compiler/detect_encoding"]
reflection = ["dep:rs_reflection_core", "dep:rs_reflection_system"]

[dependencies]
egui-snarl = { git = "https://github.com/zakarumych/egui-snarl.git", rev = "036b076", version = "0.5.0", features = [
    "serde",
] }
syn = { version = "2.0.87", features = ["full", "extra-traits"] }
log = "0.4.22"
env_logger = "0.11.5"
russimp = { version = "3.2.0", features = ["prebuilt", "static-link"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
bincode = { version = "1.3.3" }
glam = { version = "0.29.1", features = ["mint"] }
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
url = { version = "2.5.2", features = ["serde"] }
percent-encoding = "2.3.1"
winit = { version = "0.30.5" }
egui = { version = "0.29.1" }
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
egui-winit = { version = "0.29.1" }
egui_plot = "0.29.0"
uniform-cubic-splines = { version = "0.1", default-features = false, features = [
    "std",
] }
rfd = "0.15.0"
image = "0.25.4"
regex = "1.11.1"
notify = "7.0.0"
notify-debouncer-mini = { version = "0.5.0" }
walkdir = "2.5.0"
dunce = "1.0.5"
path-slash = "0.2.1"
md-5 = { version = "0.10.6" }
anyhow = { version = "1.0.92" }
lazy_static = "1.5.0"
image_dds = { version = "0.6.1" }
clap = { version = "4.5.20", features = ["derive"] }
naga = { version = "22.1.0" }
wgpu = "22.1.0"
rand = { version = "0.8.5" }
mp4 = { version = "0.14.0" }
tracy-client = { version = "0.17.4", default-features = false }
rapier3d = { version = "0.22.0", features = ["simd-stable", "serde-serialize"] }
transform-gizmo-egui = { path = "../.xmake/deps/egui-gizmo/crates/transform-gizmo-egui" }
rs_render = { path = "../rs_render" }
rs_render_types = { path = "../rs_render_types" }
rs_foundation = { path = "../rs_foundation" }
rs_artifact = { path = "../rs_artifact" }
rs_engine = { path = "../rs_engine" }
rs_hotreload_plugin = { path = "../rs_hotreload_plugin" }
rs_shader_compiler = { path = "../rs_shader_compiler" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_assimp = { path = "../rs_assimp" }
rs_proc_macros = { path = "../rs_proc_macros" }
rs_metis = { path = "../rs_metis" }
rs_media = { path = "../rs_media" }
rs_audio = { path = "../rs_audio" }
rs_v8_host = { path = "../rs_v8_host", optional = true }
rs_reflection_system = { path = "../crates/rs_reflection_system", optional = true }
rs_reflection_core = { path = "../crates/rs_reflection_core", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
rs_dotnet = { path = "../rs_dotnet", optional = true }
rs_dotnet_host = { path = "../rs_dotnet_host", optional = true }

[[bin]]
name = "editor"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"
svg_to_ico = "1.2"
glob = "0.3.1"
rs_core_minimal = { path = "../rs_core_minimal" }

[package.metadata.winresource]
OriginalFilename = "rs_editor.exe"
LegalCopyright = "GNU General Public License v2.0"
