[package]
name = "rs_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["standalone"]
renderdoc = ["rs_render/renderdoc"]
editor = [
    "rs_shader_compiler/editor",
    "rs_render/editor",
    "rs_core_minimal/editor",
    "dep:anyhow",
]
standalone = [
    "rs_shader_compiler/standalone",
    "rs_render/standalone",
    "rs_core_minimal/standalone",
]
profiler = ["tracy-client/default", "rs_render/profiler"]
plugin_shared_crate = []

[dependencies]
bitflags = "2.6.0"
md-5 = { version = "0.10.6" }
anyhow = { version = "1.0.95", optional = true }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.134"
chrono = "0.4.39"
log = "0.4.22"
env_logger = "0.11.6"
moka = { version = "0.12.8", default-features = false, features = ["sync"] }
image = "0.25.5"
lazy_static = "1.5.0"
walkdir = "2.5.0"
rayon = "1.10.0"
egui = { version = "0.30.0" }
raw-window-handle = "0.6.2"
url = { version = "2.5.4", features = ["serde"] }
percent-encoding = "2.3.1"
wgpu = "23.0.1"
glam = { version = "0.29.2", features = ["mint", "serde"] }
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
rand = { version = "0.8.5" }
tracy-client = { version = "0.18.0", default-features = false }
rapier3d = { version = "0.22.0", features = ["simd-stable", "serde-serialize"] }
uniform-cubic-splines = { version = "0.1", default-features = false, features = [
    "std",
] }
dyn-clone = "1.0.17"
downcast-rs = "1.2.1"
rs_foundation = { path = "../rs_foundation" }
rs_audio = { path = "../rs_audio" }
rs_artifact = { path = "../rs_artifact" }
rs_render = { path = "../rs_render" }
rs_core_minimal = { path = "../rs_core_minimal" }
rs_shader_compiler = { path = "../rs_shader_compiler" }
rs_proc_macros = { path = "../rs_proc_macros" }
rs_render_types = { path = "../rs_render_types" }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version = "0.30.7" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
ndk-sys = "0.6.0"
